--- a/src/app/components/list-screen/list-screen.component.html
+++ b/src/app/components/list-screen/list-screen.component.html
@@ -1,1 +1,19 @@
-<p>list-screen works!</p>
+<div class="list-container">
+  <div class="title-container">
+    <h3>{{title}}</h3>
+    <span>Today's date</span>
+  </div>
+  <div class="notes-container">
+    <div *ngFor="let note of notes" class="note">
+      <mat-radio-button></mat-radio-button>
+      <span>{{note}}</span>
+      <button mat-icon-button><mat-icon>star</mat-icon></button>
+    </div>
+  </div>
+  <form [formGroup]="formGroup" (ngSubmit)="createNote()">
+    <mat-form-field>
+      <input matInput placeholder="label" value="value" formControlName="newNote">
+    </mat-form-field>
+  </form>
+
+</div>
