--- a/src/app/components/note-block/note-block.component.scss
+++ b/src/app/components/note-block/note-block.component.scss
@@ -1,13 +1,7 @@
-// .notes-container {
-    
-//   .note {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-//     box-sizing: border-box;
-//     padding: 2px 20px;
-//     // width: 100%;
-//     height: $item-height;
-//     border: 1px solid gray;
-//   }
-// }
+.clickable {
+  cursor: pointer;
+}
+
+.strikethrough {
+  text-decoration: line-through;
+}
