--- a/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -3,6 +3,6 @@
   {{data.dialogContent}}
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="onConfirmDialog()">Yes</button>
+  <button mat-stroked-button mat-dialog-close>No</button>
+  <button mat-stroked-button color="primary" mat-dialog-close cdkFocusInitial (click)="onConfirmDialog()">Yes</button>
 </div>
