--- a/src/app/components/rename-dialog/rename-dialog.component.html
+++ b/src/app/components/rename-dialog/rename-dialog.component.html
@@ -7,6 +7,6 @@
   </mat-form-field>
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button mat-dialog-close cdkFocusInitial (click)="renameList(renameForm)">Save</button>
+    <button mat-raised-button color="primary" mat-dialog-close cdkFocusInitial (click)="renameList(renameForm)">Save</button>
   </div>
 </form>
