--- a/src/app/components/list-screen/list-screen.component.scss
+++ b/src/app/components/list-screen/list-screen.component.scss
@@ -3,13 +3,18 @@ $item-height: 56px;
 .list-container {
   display: flex;
   flex-direction: column;
-  // flex: 0 0 100%;
   
   .title-container {
-    // background-color: red;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+    height: 50px;
+
+    h1 {
+      margin: 0px;
+    }
   }
 
   .notes-container {
@@ -20,20 +25,16 @@ $item-height: 56px;
       justify-content: space-between;
       box-sizing: border-box;
       padding: 2px 20px;
-      // width: 100%;
       height: $item-height;
       border: 1px solid gray;
+      align-items: center;
     }
   }
 
   form {
     display: flex;
     flex-direction: column;
-    // align-items: center;
     height: $item-height;
     flex: 0 0 100%;
-    // mat-form-field {
-    //   // flex: 0 0 98%;
-    // }
   }
 }
