--- a/src/app/components/note-block/note-block.component.html
+++ b/src/app/components/note-block/note-block.component.html
@@ -1,10 +1,10 @@
 <mat-checkbox (change)="changeCompletedStatus($event)"
-  [checked]="note.isArchived" color="primary"
-  [matTooltip]="'Mark as ' + (note.isArchived ? 'uncompleted' : 'completed')"></mat-checkbox>
+  [checked]="note && note.isArchived" color="primary"
+  [matTooltip]="'Mark as ' + (note && note.isArchived ? 'uncompleted' : 'completed')"></mat-checkbox>
 <span class="clickable" (click)="onEditNote()" matTooltip="Edit note"
-  [ngClass]="{'strikethrough': note.isArchived}">{{note.content}}</span>
+  [ngClass]="{'strikethrough': note && note.isArchived}">{{note && note.content}}</span>
 <mat-slide-toggle (change)="changeDailyStatus($event)"
-  [checked]="note.isFavorite" color="primary"
-  [matTooltip]="(note.isFavorite ? 'Remove from' : 'Add to') + ' daily'">
+  [checked]="note && note.isFavorite" color="primary"
+  [matTooltip]="(note && note.isFavorite ? 'Remove from' : 'Add to') + ' daily'">
   Daily
 </mat-slide-toggle>
